# windows_build_tips

./: .gitignore  README.ja.md  README.md  SUMMARY.md  book.toml  utf8build.md
.github/workflows/: mdbook.yml
hello_utf8/: CMakeLists.txt  README.md  cp_utf8.manifest  hello_utf8.c  hello_utf8.rc
src/: SUMMARY.md  utf8build.ja.md
